[tool.poetry]
name = "queue-guard"
version = "0.1.0"
description = ""
authors = ["emias"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = {extras = ["all"], version = "^0.115.12"}
dishka = "^1.6.0"
redis = "^6.2.0"
celery = "^5.5.3"
pydantic = "^2.11.7"
asgiref = "^3.9.1"
eventlet = "^0.40.3"
